0029187: VIS - TKIVtkDraw should support Cocoa on macOS

Adding support of Cocoa on macOS